Closed Bug 566745 Opened 14 years ago Closed 14 years ago

"Failed to initialize HistoryDataSource (couldn't get global history)" at startup after bug 529500

Categories

(Camino Graveyard :: History, defect)

All
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: alqahira, Assigned: stuart.morgan+bugzilla)

References

Details

(Keywords: regression, Whiteboard: [camino-2.0.3])

Attachments

(1 file)

On every startup, "Failed to initialize HistoryDataSource (couldn't get global history)" gets logged.

From irc:

[7:05pm] smorgan: 180 // this should only be called after app launch, when the data source is available
[7:05pm] smorgan: The fix is to move:
[7:05pm] smorgan: 422  // Listen for history being cleared.
[7:06pm] smorgan: 423  [[NSNotificationCenter defaultCenter] addObserver:self
[7:06pm] smorgan: 424                                            selector:@selector(historyCleared:)
[7:06pm] smorgan: 425                                                name:kNotificationNameHistoryDataSourceCleared
[7:06pm] smorgan: 426                                              object:[HistoryMenuDataSourceOwner sharedHistoryDataSource]];
[7:06pm] smorgan: Oh, to a new method
Flags: camino2.0.3+
Attached patch fixSplinter Review
Now with less fail; calls sharedHistoryDataSource after launching is done, just like the existing history data source notification listener is careful to do (and has a comment explaining that I missed while stealing code).

Also fixes the use of "setup" as a verb in this file, because I'm unwilling to add another instance of the wrong version.
Attachment #446128 - Flags: superreview?(mikepinkerton)
Comment on attachment 446128 [details] [diff] [review]
fix

sr=pink
Attachment #446128 - Flags: superreview?(mikepinkerton) → superreview+
CVS trunk, CAMINO_2_0_BRANCH, and http://hg.mozilla.org/camino/rev/dc92625408bf for Stuart (well, for me so that I can respin this afternoon ;) )

Thanks all around for the quick turn-around on this!
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [camino-2.0.3]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: