Bug 566745: Make sure historyCleared: notifications only call sharedHistoryDataSource after launching is done, and fix uses of 'setup' as a verb in HistoryMenu.mm. Patch by Stuart Morgan <stuart.morgan@alumni.case.edu>, r/sr=pink